# flutter_tuner

./: .gitignore  CHANGELOG.md  README.md  analysis_options.yaml  pubspec.yaml
.github/workflows/: ci.yml
android/: build.gradle  settings.gradle
android/src/androidTest/kotlin/com/degastonapps/flutter_tuner/: TunerInstrumentedTest.kt
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/degastonapps/flutter_tuner/: FlutterTunerPlugin.kt  Tuner.kt  TunerNew.kt
android/src/test/kotlin/com/degastonapps/flutter_tuner/: FlutterTunerPluginTest.kt
cpp/: CMakeLists.txt  jni_bridge.cpp  tuner.cpp  tuner.h  tuner_test.cpp  tuner_wrapper.cpp
cpp/tests/: test_tuner.cpp
cpp_tests/: CMakeLists.txt  tuner_test.cpp
cpp_tests/fixtures/: README.md
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/degastonapps/flutter_tuner_example/: MainActivity.kt
example/integration_test/: plugin_integration_test.dart
example/ios/: Podfile
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
example/test/: widget_test.dart
ios/: flutter_tuner.podspec
ios/Classes/: FlutterTunerPlugin.swift  Tuner.swift  TunerBridge.h  TunerBridge.mm  TunerNew.swift  TunerWrapper.h  TunerWrapper.mm  tuner-bridging-header.h  tuner.h
ios/Classes/cpp/: CMakeLists.txt  Yin.c  Yin.h  jni_bridge.cpp  tuner.cpp  tuner.h  tuner_test.cpp  tuner_wrapper.cpp  tuner_wrapper.h  yinfft.c  yinfft.h
ios/Classes/cpp/src/: Yin.h
ios/Tests/: TunerTests.swift
lib/: flutter_tuner.dart  flutter_tuner_method_channel.dart  flutter_tuner_platform_interface.dart
test/: README.md  flutter_tuner_method_channel_test.dart  flutter_tuner_test.dart
